# connector-hello-source

./: Cargo.toml  Makefile  README.md
crates/connector-main/: Cargo.toml  Connector.toml  config-with-secret.yaml  config.yaml  secret.txt
crates/connector-main/src/: main.rs
crates/ext-lib/: Cargo.toml
crates/ext-lib/src/: lib.rs
crates/ext-lib/tests/: all_hour.geojson
crates/external-lib/: Cargo.toml
crates/external-lib/src/: lib.rs
