# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/ext-lib",
    "crates/connector-main"
]
resolver = "2"

[workspace.dependencies]
async-std = { version = "1.12", default-features = false, features = ["attributes", "tokio1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", default-features = false, features = ["macros", "tracing"] }