[package]
name = "connector-main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
ext-lib = { path = "../ext-lib"}

async-std = { workspace = true }
fluvio = { git = "https://github.com/infinyon/fluvio", rev = "v0.11.2" }
fluvio-connector-common = { git = "https://github.com/infinyon/fluvio", rev = "v0.11.2", features = ["derive"]}
serde = { workspace = true }
tokio = { workspace = true, default-features = false, features = ["time"] }
tracing = "0.1"
