[package]
name = "external-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
geojson = "0.24"
reqwest = { version = "0.11", features = ["rustls-tls", "json"], default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1.35", features = ["macros", "tracing"] }

